[tool.poetry]
name = "qld-fuel"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
sqlalchemy = "^2.0.29"
pyodbc = "^5.1.0"
pydantic-settings = "^2.2.1"
alembic = "^1.13.1"
psycopg2-binary = "^2.9.10"
geoalchemy2 = "^0.17.1"

[tool.poetry.group.dev.dependencies]
ruff = "^0.3.2"
ipykernel = "^6.29.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
