[project]
name = "qld-fuel"
version = "0.1.0"
description = ""
authors = [{ name = "Your Name", email = "you@example.com" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "boto3 (>=1.38.31,<2.0.0)",
    "alembic (>=1.16.1,<2.0.0)",
    "sqlalchemy (>=2.0.41,<3.0.0)",
    "geoalchemy2 (>=0.17.1,<0.18.0)",
    "pydantic (>=2.11.5,<3.0.0)",
    "pydantic-settings (>=2.9.1,<3.0.0)",
    "fuelpricesqld (>=0.1.0.dev1,<0.2.0)",
]

[tool.poetry]

[tool.poetry.group.dev.dependencies]
ruff = "^0.11.13"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
